idea loc + adjustments

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -86,3 +86,21 @@
 
  union_of_beneul_reform:0 "Union of Beneul"
  union_of_beneul_reform_desc:0 "Union of Beneul was proclaimed after large amounts of nobility from the south fled north to the only unconquered Caidthmorian realm - Nabhin. Seven of the greatest families were granted land and titles, but most of the impoverished nobles had to become their servants."
+
+ nabhin_ideas:0 "Nabhini Ideas"
+ nabhin_ideas_bonus:0 "Nabhini Ambition"
+ nabhin_ideas_start:0 "Nabhini Traditions"
+ nabhin_union_of_beneul:0 "Union of Beneul"
+ nabhin_union_of_beneul_desc:0 "Following the brutal Argenian invasion, many dorchean nobles fled to Nabhin with plans to soon reconquer their lost lands. Many centuries have passed, but the hope for dorchean Caidthmor remains."
+ nabhin_ehren_connections:0 "Ehren Connections"
+ nabhin_ehren_connections_desc:0 "In order to maintain a large population in these cold and mountainous lands, our kings and merchants were forced to maintain a stable supply of grain from the continent, which was most commonly achieved through trading with the Ehrenstaat."
+ nabhin_whaling_economy:0 "Whaling Economy"
+ nabhin_whaling_economy_desc:0 "The seas around the Dorchean isles are known for their large amounts of various sea life. While most nations focus on fishing, in the northern part of the Archipelago it is common for villages to organize group to hunt for whales to gain their meat, which is a sought after commodity."
+ nabhin_ceafiltan_harbor:0 "Ceafiltan Harbor"
+ nabhin_ceafiltan_harbor_desc:0 "Jagged and high coasts of Nabhin often cause more problems than they solve. For most of our history only in few selected places, one of such being the town of Ceafilta which, alongside Beneul, is the backbone of our economy."
+ nabhin_seamen_of_the_north:0 "Seamen of the North"
+ nabhin_seamen_of_the_north_desc:0 "Large swats of mountainous land unsuitable for agriculture has caused most of our population to concentrate around the coasts and live of off the sea."
+ nabhin_reinforced_royal_authority:0 "Reinforced Royal Authority"
+ nabhin_reinforced_royal_authority_desc:0 "To protect the royal interest from particularism, king Escual began the process of cracking down on noble privileges. While the seven families still had a major influence over the country, their power was slowly diminishing at the expense of the monarch."
+ nabhin_tarhian_fur:0 "Tarhian Fur"
+ nabhin_tarhian_fur_desc:0 "Colonial ventures in the newly discovered western continent has allowed us to diversify our economy from whaling and fishing. Tarhian furs quickly became a major competitor to Tummic furs thanks to their high quality and exoticism."
