--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -169,3 +169,21 @@
  kriegerstein_permanent_court_desc:0 "In the medieval period the imperial court was not operating in one location. The emperor was constantly on the move living in his vassals' quarters or his own palaces to personally control his subjects. Now through the new policies the court was set in Hegenstadt, in a splendorous palace in the middle of the city to show our power and influence."
  kriegerstein_imperial_court_of_affairs:0 "Imperial Court of Affairs"
  kriegerstein_imperial_court_of_affairs_desc:0 "Court of Affairs was a parrarel institution to the regular imperial court which was more focused on the matters of the lands directly under control of the emperor to take some of the burden off of him. It was the first institution of its kind, not only trying to accomodate the needs of nobility and aristocracy, but also poorer merchants and common folk."
+
+ salia_ideas:0 "Salish Ideas"
+ salia_ideas_bonus:0 "Salish Ambition"
+ salia_ideas_start:0 "Salish Tradition"
+ salia_land_of_the_gusten:0 "Land of the Gusten"
+ salia_land_of_the_gusten_desc:0 "Rivers flowing into the Gusten are known for carving deep but also wide riverbeds often used for transporation of goods. This led to most cities forming along those rivers, further increasing their importance."
+ salia_salian_baroque:0 "Salish Baroque"
+ salia_salian_baroque_desc:0 "Turbulent times of the XVI and XVII century in the empire have devastated most of the empire, but luckily most of the conflict happened outside of our lands. Political and religious stability allowed our society to invest in arts, build new churches and prosper."
+ salia_salish_knights:0 "Salish Knights"
+ salia_salish_knights_desc:0 "Salish knights never really were a major military formation but rather a symbol of status and wealth, because only the rich could afford horses and full equipment. Now thanks to increasing wealth and organization of state-funded cavalry they can finalyl be of us in modern times."
+ salia_castles_of_nine_emperors:0 "Castles of Nine Emperors"
+ salia_castles_of_nine_emperors_desc:0 "Salia is also known as the land of the emperors, due to the fact that the vast majority of Silvestrine emperors came from these regions. Remnants of their once great fortifications still scatter the land and remind us of our past."
+ salia_salt_industry:0 "Salt Industry"
+ salia_salt_industry_desc:0 "Salt is essential to food conservation. Most of the salt on the continent comes from the seawater, but mining it provides a much better yield. Salish and Bohemian salt mines supply not only the empire, but also Camaria and Nifthem."
+ salia_waldrodung:0 "Waldrodung"
+ salia_waldrodung_desc:0 "When Saelius conquered these lands they were covered in a dense and almost untraversable forests. The process of deforestation started with the arrival of Saelian colonists and continues to this day."
+ salia_embrace_the_nordmarker_model:0 "Embrace the Nordmarker Model"
+ salia_embrace_the_nordmarker_model_desc:0 "Nordmarker model of military focuses on high drill and discipline of the infantry, but we also adapt it to allow us to use our elite cavalry."
