--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -13,7 +13,7 @@
  syvametsa_tradenode:0 "Syvämetsä"
  chilverchia_tradenode:0 "Retonoe"
  diavasa_tradenode:0 "Diavasa"
- acerb_tradenode:0 "Acerb"
+ acerb_tradenode:0 "Alvaro"
  dhahabia_tradenode:0 "Dhahabia"
  hamidar_tradenode:0 "Hamidar"
  sedica_tradenode:0 "Sedica"
