--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -86,7 +86,7 @@
  harmonized_saelian:0 "Harmonized Saelian"
 
  merhaan.1003.t:0 "Harmonization of Yermic Faiths"
- merhaan.1003.desc:0 "idk"
+ merhaan.1003.desc:0 "Yermic prophets shared many obvious truths which helped maqitan societies to develop their social structure and interact with each other. Methods of which the information of these great men spread will greatly benefit us."
  merhaan.1003.a:0 "Closer to truth"
  harmonized_yermic:0 "Harmonized Yermic"
 
@@ -101,7 +101,7 @@
  harmonized_anhativaz:0 "Harmonized Anhativaz"
 
  merhaan.1006.t:0 "Harmonization of Hestani Faiths"
- merhaan.1006.desc:0 "idk"
+ merhaan.1006.desc:0 "Hestani faiths are quite diverse, but they all blended with each other over the millenia and hold many shared elements. This has made them easy to adapt and understand even to outsiders."
  merhaan.1006.a:0 "Closer to truth"
  harmonized_hestani:0 "Harmonized Hestani"
 
@@ -111,12 +111,12 @@
  harmonized_samadian:0 "Harmonized Samadian"
 
  merhaan.1008.t:0 "Harmonization of Wasichantlian Faiths"
- merhaan.1008.desc:0 "idk"
+ merhaan.1008.desc:0 "Cruel rituals of Wasichantlia are not as bad as one might think and even hold some similarities with our traditions. Punishing enemies to show strength is vital to maintaining a stable society."
  merhaan.1008.a:0 "Closer to truth"
- harmonized_wasichantliani:0 "Harmonized wWsichantlian"
+ harmonized_wasichantlian:0 "Harmonized Wasichantlian"
 
  merhaan.1009.t:0 "Harmonization of Hengtuan Faiths"
- merhaan.1009.desc:0 "idk"
+ merhaan.1009.desc:0 "People of Hengtuan have always put a great deal of importance on the ruler's ability to govern and local spirits only possess a secondary role. Local philosophers can help us increase our legitimacy."
  merhaan.1009.a:0 "Closer to truth"
  harmonized_hengtuan:0 "Harmonized Hengtuan"
 
