merhaan harmonization finishing tocz

--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -96,7 +96,7 @@
  harmonized_samadio_taedian:0 "Harmonized Samadio-Taedian"
 
  merhaan.1005.t:0 "Harmonization of Anhativaz Faiths"
- merhaan.1005.desc:0 "idk"
+ merhaan.1005.desc:0 "Traditions of Anhativaz faiths goes back to first Zakarturi Empire, their obsession about chronicling their past and remembering about their old glory allows us to get look into older times. Now we have access to their libraries and their chroniclers, with them our knowledge will never die."
  merhaan.1005.a:0 "Closer to truth"
  harmonized_anhativaz:0 "Harmonized Anhativaz"
 
