merhaan holy site + ehren fixes

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -123,5 +123,5 @@
  shaantin_mountain:0 "Mount Shaantin"
  shaantin_mountain_desc:0 " "
  
- ancient_merhaan_site:0 "Anciet Merhaan Site"
- ancient_merhaan_site_desc:0 "According to the Merhaan faiths, this is the place where the great Merhaan tree used to be. Now, the headquaters for all Bunelisuli philosophers is located here."
+ ancient_merhaan_site:0 "Place of Merhaan"
+ ancient_merhaan_site_desc:0 "According to all shamans of Merhaan, old tree that gave life to all humans was here. In these times it works as a spiritual capital for all people of Merhaan faith."
