Rah Jadid Events
also with one ruler for 2-province rah jadid country added for testing.

--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -98,3 +98,51 @@
  ehsani_community_protected:0 "Protected Ehšani Community"
  
  ehsani_happened_tt:0 "Ehšan's Influence has greatly increased"
+ 
+ 
+ rah_jadid.1.t:0 "Interfaith Conflict"
+ rah_jadid.1.desc:0 "Local Conflict between Uttarian and Rah Jadid priests (temporary desc)"
+ rah_jadid.1.a:0 "Side with Uttarian Priest"
+ rah_jadid.1.b:0 "Side with Rah Jadid Priest"
+ rah_jadid.1.c:0 "Side with neither of the priests"
+ rah_jadid.2.t:0 "Funding the priesthood"
+ rah_jadid.2.desc:0 "the state priesthood (clergy) asks for your lunch money or something (temporary desc)"
+ rah_jadid.2.a:0 "Give clergy money"
+ rah_jadid.2.b:0 "Refuse to give money"
+ rah_jadid.3.t:0 "Local priest's teachings found controversial"
+ rah_jadid.3.desc:0 "Local priest has outdated definition of doctrines (temporary desc)"
+ rah_jadid.3.a:0 "Replace the priest"
+ rah_jadid.3.b:0 "New doctrines will eventualy reach him"
+ rah_jadid.3.c:0 "We should invest into faster spreading of the informations"
+ rah_jadid.4.t:0 "Uttarians resist conversion"
+ rah_jadid.4.desc:0 " "
+ rah_jadid.4.a:0 "If they don't convert, kill them"
+ rah_jadid.4.b:0 "Back down"
+ rah_jadid.5.t:0 "Debate about religious cosmology"
+ rah_jadid.5.desc:0 "Major debate among priests about cosmology (temporary desc)"
+ rah_jadid.5.a:0 "Support religious compromise"
+ rah_jadid.5.b:0 "Support Narsehanism"
+ rah_jadid.6.t:0 "Debate about religious cosmology"
+ rah_jadid.6.desc:0 "Major debate among priests about cosmology (temporary desc)"
+ rah_jadid.6.a:0 "Support religious compromise"
+ rah_jadid.6.b:0 "Support Frankrani Laws"
+ rah_jadid.7.t:0 "Local community returns to the old way"
+ rah_jadid.7.desc:0 "Random Province switches to Uttarian (temporary desc)"
+ rah_jadid.7.a:0 "Let them be"
+ rah_jadid.7.b:0 "Stop them!"
+ rah_jadid.8.t:0 "Theological debate"
+ rah_jadid.8.desc:0 "debate about rah jadid doctrines (temporary desc)"
+ rah_jadid.8.a:0 "Support moderate theologian"
+ rah_jadid.8.b:0 "Support radical theologian"
+ 
+ 
+ TD_Rah_jadid_embraced_narsehanism:0 "Embraced Narsehanism at the debate"
+ TD_Rah_jadid_embraced_frankrani_laws:0 "Embraced Frankrani Laws at the debate"
+ TD_Rah_jadid_supported_moderate_theologian:0 "Supported moderate Theologian"
+ TD_Rah_jadid_supported_radical_theologian:0 "Supported radical theologian"
+ 
+ #At this point i run out of ideas to name these goddamn modifiers, if you wanna name them you're free to do so.
+ #  - Kazuma
+ TD_Rah_jadid_tolerance_of_heretics:0 "Increased tolerance of heretics"
+ TD_Rah_jadid_tolerance_of_true_faith:0 "Increased tolerance of true faith"
+ TD_Rah_jadid_religious_unity:0 "Increased religious unity"
