--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -101,48 +101,46 @@
  
  
  rah_jadid.1.t:0 "Interfaith Conflict"
- rah_jadid.1.desc:0 "Local Conflict between Uttarian and Rah Jadid priests (temporary desc)"
+ rah_jadid.1.desc:0 "A conflict between our appointed and a local priests. The conflict was to be expected, but this small discourse spread like a wildfire and now an entire region is fighting. What should we do about it?"
  rah_jadid.1.a:0 "Side with Uttarian Priest"
  rah_jadid.1.b:0 "Side with Rah Jadid Priest"
  rah_jadid.1.c:0 "Side with neither of the priests"
- rah_jadid.2.t:0 "Funding the priesthood"
- rah_jadid.2.desc:0 "the state priesthood (clergy) asks for your lunch money or something (temporary desc)"
+ rah_jadid.2.t:0 "Funding the Priesthood"
+ rah_jadid.2.desc:0 "We are stretched thin. Not enough new priests and large amounts of heathens have caused the most influential men of our clergy to call out to the state for a tiny loan to stimulate clerical education and improve the quality of life of many priests."
  rah_jadid.2.a:0 "Give clergy money"
  rah_jadid.2.b:0 "Refuse to give money"
- rah_jadid.3.t:0 "Local priest's teachings found controversial"
- rah_jadid.3.desc:0 "Local priest has outdated definition of doctrines (temporary desc)"
+ rah_jadid.3.t:0 "Controversial Priest"
+ rah_jadid.3.desc:0 "Many fail to find themselves in the dynamic religious landscape of Visparaya. Despite most of the states having technically the same religion, many of them interpret the doctrines in wildly different ways. It appears that one of our missionaries in a rural uttarian village is spreadign some unorthodox teachings, probably due to not receiving the newest information about the doctrines of the leading clergy."
  rah_jadid.3.a:0 "Replace the priest"
  rah_jadid.3.b:0 "New doctrines will eventualy reach him"
- rah_jadid.3.c:0 "We should invest into faster spreading of the informations"
- rah_jadid.4.t:0 "Uttarians resist conversion"
- rah_jadid.4.desc:0 " "
+ rah_jadid.3.c:0 "We need to enlighten our backwards priests."
+ rah_jadid.4.t:0 "Uttarians Resist Conversion"
+ rah_jadid.4.desc:0 "Our efforts to enlighten the ignorant rural population of [TD_rah_jadid_active_missionary_in_uttarian_province.GetName] have seem to failed, as many people in these areas are starting to riot and burn down our newly built churches. If we continue the conversion, they might launch a full-scale uprising."
  rah_jadid.4.a:0 "If they don't convert, kill them"
  rah_jadid.4.b:0 "Back down"
- rah_jadid.5.t:0 "Debate about religious cosmology"
- rah_jadid.5.desc:0 "Major debate among priests about cosmology (temporary desc)"
- rah_jadid.5.a:0 "Support religious compromise"
+ rah_jadid.5.t:0 "Debate About Religious Cosmology"
+ rah_jadid.5.desc:0 "Many priests from both Uttarian and Rah Jadid sides have gathered to discuss religious doctrines. Most of them wish to better understand the other side, but a few malcontents only wish to show their religious supremacy and return to the status quo."
+ rah_jadid.5.a:0 "Try to maintain the status quo"
  rah_jadid.5.b:0 "Support Narsehanism"
- rah_jadid.6.t:0 "Debate about religious cosmology"
- rah_jadid.6.desc:0 "Major debate among priests about cosmology (temporary desc)"
- rah_jadid.6.a:0 "Support religious compromise"
+ rah_jadid.6.t:0 "Debate About Religious Cosmology"
+ rah_jadid.6.desc:0 "Many priests from both Uttarian and Rah Jadid sides have gathered to discuss religious doctrines. Some of them wish to better understand the other side, but many only wish to show their religious supremacy and return to the times of Frankrani supremacy."
+ rah_jadid.6.a:0 "Try to maintain the status quo"
  rah_jadid.6.b:0 "Support Frankrani Laws"
- rah_jadid.7.t:0 "Local community returns to the old way"
- rah_jadid.7.desc:0 "Random Province switches to Uttarian (temporary desc)"
+ rah_jadid.7.t:0 "Local Community Returns to the Old Way"
+ rah_jadid.7.desc:0 "It appears that people of [TD_rah_jadid_province_to_return_to_uttarian.GetName] have falsely converted and in reality always believed in their old Uttarian gods. Maybe there is a way to 'persuade' them to embrace our enlightened religion again?"
  rah_jadid.7.a:0 "Let them be"
  rah_jadid.7.b:0 "Stop them!"
- rah_jadid.8.t:0 "Theological debate"
- rah_jadid.8.desc:0 "debate about rah jadid doctrines (temporary desc)"
- rah_jadid.8.a:0 "Support moderate theologian"
- rah_jadid.8.b:0 "Support radical theologian"
+ rah_jadid.8.t:0 "Theological Debate"
+ rah_jadid.8.desc:0 "Compared to what one might think, debates between us and heathens are much less violent than between our own clergy. Recently one such debate became so popular it even reached out court. One of the priests claims that rights of the Uttarians must be preserved due to their influence on our faith, but other priests call for forceful conversion and return to our Ilumist roots."
+ rah_jadid.8.a:0 "Support the moderate theologian"
+ rah_jadid.8.b:0 "Support the radicals"
  
  
- TD_Rah_jadid_embraced_narsehanism:0 "Embraced Narsehanism at the debate"
- TD_Rah_jadid_embraced_frankrani_laws:0 "Embraced Frankrani Laws at the debate"
- TD_Rah_jadid_supported_moderate_theologian:0 "Supported moderate Theologian"
+ TD_Rah_jadid_embraced_narsehanism:0 "Narsehanism on the Rise"
+ TD_Rah_jadid_embraced_frankrani_laws:0 "Zealotry on the Rise"
+ TD_Rah_jadid_supported_moderate_theologian:0 "Supported moderate theologian"
  TD_Rah_jadid_supported_radical_theologian:0 "Supported radical theologian"
- 
- #At this point i run out of ideas to name these goddamn modifiers, if you wanna name them you're free to do so.
- #  - Kazuma
- TD_Rah_jadid_tolerance_of_heretics:0 "Increased tolerance of heretics"
- TD_Rah_jadid_tolerance_of_true_faith:0 "Increased tolerance of true faith"
- TD_Rah_jadid_religious_unity:0 "Increased religious unity"
+
+ TD_Rah_jadid_tolerance_of_heretics:0 "Increased Cohesion"
+ TD_Rah_jadid_tolerance_of_true_faith:0 "Increased fervor"
+ TD_Rah_jadid_religious_unity:0 "Status Quo reinforced"
