--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -104,3 +104,21 @@
  nabhin_reinforced_royal_authority_desc:0 "To protect the royal interest from particularism, king Escual began the process of cracking down on noble privileges. While the seven families still had a major influence over the country, their power was slowly diminishing at the expense of the monarch."
  nabhin_tarhian_fur:0 "Tarhian Fur"
  nabhin_tarhian_fur_desc:0 "Colonial ventures in the newly discovered western continent has allowed us to diversify our economy from whaling and fishing. Tarhian furs quickly became a major competitor to Tummic furs thanks to their high quality and exoticism."
+
+ caidthmor_ideas:0 "Caidthmorian Ideas"
+ caidthmor_ideas_bonus:0 "Caidthmorian Ambition"
+ caidthmor_ideas_start:0 "Caidthmorian Traditions"
+ caidthmor_stories_of_glory:0 "Stories of Glory"
+ caidthmor_stories_of_glory_desc:0 "The times of our rule of these lands are but a memory, but that doesn't mean that they are gone - they live through our stories, great epic poems and songs, telling the tales of great heroes, sea beasts and lost kingdoms. They remind us of our glory and make our people wishing to bring those times back."
+ caidthmor_the_seven_araladh:0 "The Seven Araladh"
+ caidthmor_the_seven_araladh_desc:0 "The seven great families of Caidthmor hold the majority of the power in the country. Now those remnants of the royalty of the fallen kingdoms once again own their ancestral lands reconquered from Argenia and for that they are forever grateful to the kings of Caidthamor."
+ caidthmor_continental_trade:0 "Continental Trade"
+ caidthmor_continental_trade_desc:0 "Farming in the flatlands can only feed so many people before we have to resort to fishing. Thankfully, our large amounts of expensive goods such as whale oil and fish allow us to not only earn enough to purchase grain but also profit from it."
+ caidthmor_the_northern_island:0 "The Northern Island"
+ caidthmor_the_northern_island_desc:0 "The island of Caidthamor is not only the biggest, but also the most mountainous in the archipelago. Most of the coasts consist of rocky cliffs or deep valleys, making foreign disembarkment incredibly difficult. Even if the enemy manages to reach our island, they have to penetrate the unconquerable castles which scatter the land."
+ caidthmor_wirosepan_resurgence:0 "Wirosepan Resurgence"
+ caidthmor_wirosepan_resurgence_desc:0 "While citizens of the continent reject the Emperor and embrace sigilianism, people of our islands decided to reembrace Wirosepanism, which elevates Saelius to the status of godhood. This not only brings us a sense of national identity, but also brings us together and strengthens our already powerful bonds."
+ caidthmor_integration_of_ehren_minorities:0 "Integration of Ehren Minorities"
+ caidthmor_integration_of_ehren_minorities_desc:0 "Ever since ehren traders came and settled in the Dorchean islands, many saw them as another invader. But as the time went by, many grew accustomed to them and often engage with them to trade. As of now they are valuable members of our nation and some of the few things that connect us to the continent."
+ caidthmor_repurposing_old_tactics:0 "Repurposing Old Tactics"
+ caidthmor_repurposing_old_tactics_desc:0 "Argenian conquest has shown our population that military tactics applied in our isles were years behind the continent. But a few centuries later with the introduction of gunpowder many of our great leaders dust off the old books of strategy to rediscover what was once lost."
