--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -41,3 +41,21 @@
 
  zbojaner_kingdom_reform:0 "Zbojaner Kingdom"
  zbojaner_kingdom_reform_desc:0 "Local Zbojaner nobles are far less likely to accept new ideals and would rather keep the status quo intact."
+
+ nevledi_ideas:0 "Nevledian Ideas"
+ nevledi_ideas_bonus:0 "Nevledian Ambition"
+ nevledi_ideas_start:0 "Nevledian Traditions"
+ nevledi_third_imperial_kingdom:0 "Third Imperial Kingdom"
+ nevledi_third_imperial_kingdom_desc:0 "Being a king under the emperor brings a great deal of autonomy and authority. Before us there were two other kingdoms in the empire - Bohemia and Ansgarland, both of which either deteriorated or disappeared completely. Despite our not so long history, we remain as the most powerful."
+ nevledi_swamp_draining:0 "Swamp Draining"
+ nevledi_swamp_draining_desc:0 "Bogs of Nevledi have always made agriculture difficult. There always have been efforts to improve this land but only now with the growing wealth of the region our kings can finally dry the land and colonize it."
+ nevledi_bog_forts:0 "Bog Forts"
+ nevledi_bog_forts_desc:0 "However not all of the swamp was drained. Some of it still was left unchanged, not necessarily because of difficulty, but rather to exploit their defensive capabilities. The bog will make besieging our castles near impossible."
+ nevledi_silvestrine_influences:0 "Silvestrine Influences"
+ nevledi_silvestrine_influences_desc:0 "For most of our recored history we heavily interacted with the people west of us - Silvestrines. Their natural diligence and attention to detail quickly blended into our culture."
+ nevledi_bogilish_diplomacy:0 "Bogilish Diplomacy"
+ nevledi_bogilish_diplomacy_desc:0 "Despite being part of the empire, we often maintained good relations with our southern brothers in bogiland. Emperor often disaproved of this, and thus we had to maintain a good balance between our suzerain and our family."
+ nevledi_land_management:0 "Land Management"
+ nevledi_land_management_desc:0 "Quick urbanization and quickly decreasing amount of undeveloped made our population much more efficient and careful in deciding where farms and industries should go."
+ nevledi_down_the_magreina:0 "Down the Magreina"
+ nevledi_down_the_magreina_desc:0 "The city of Wulki Szanec is a small at the first glance, but it has a one important feature - it lies centrally on the Magreina River. Our rulers often taxed passing merchants high tolls at the expense of popularity among the people of Nifthem."
