--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -62,7 +62,7 @@
 
  ## Events
 
- td_ehrenstaat.1.t:0 "Storm on the Horizon\n£major_event_frame£"
+ td_ehrenstaat.1.t:0 "Storm on the Horizon"
  td_ehrenstaat.1.desc:0 "Ehrenstaat previously was a confederation of different citystates that controlled trade on entire northern side of Taedian continent. With slow centralisation of Ehren cities into one state and its trade sphere expansion nobody thought that this reality would shatter. But with rapid creation of trade leagues in Saelian Empire, Ehren profits started to disappear and its nation to crumble.\n\nCivil war that was caused by nobility allowed everyone to partition Ehren trade holdings outside of its sphere. They wanted to abolish merchant rule over the republic and create their own state. When nobles were crushed by merchant forces Ehrenstaat still couldn't maintain any power over other nations.\n\nIt all comes to newest rule of Grand Consul Diedrich Schumacher that was supported by old noble communities and expansionist politicians. He decided that conquest of Nifthem will allow this nation to rebuild old glory of this nation. But some people started to question his methods when he started to centralise entire power in his hands.\n\nWe will see where it all goes."
  td_ehrenstaat.1.a:0 "God Save Ehrenstaat"
 
