--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -675,7 +675,7 @@
  PROV674:0 "Prechtal"
  PROV675:0 "Luchter"
  PROV676:0 "Rastdorf"
- PROV677:0 "Zappenschigg"
+ PROV677:0 "Brodawki"
  PROV678:0 "Eisbachstadt"
  PROV679:0 "Tenstedt"
  PROV680:0 "Barnstorf"
