--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -13,7 +13,7 @@
 
  ## Events
  
- randwerpen.1.t:0 "Randwerpen and Ehrenstaat\n£major_event_frame£"
+ randwerpen.1.t:0 "Randwerpen and Ehrenstaat"
  randwerpen.1.desc:0 "Ehren ambition to become sole economic hegemon on the north required for them to have huge industrial base that was lacking on Ehren islands. Thats when first ideas to integrate Nifthem and Tummland emerged, with first being more favourable to the leadership. From this time Ehrenstaat started to tighten their grip in their sphere of influence with mass vassalization and forceful integration of cities into Ehren administration in first half of XV ceuntry.\nThis rapid Ehren expansion didn't go unnoticed as Saelian Empire started to support idea of integration of Bloemrijkland into the Empire and Randwerpen deciding to unify entire region to stop Ehren agression. Alerted leadership of Randwerpen started mass militarisation and consolidation of the realm to protect against the future invasion."
  randwerpen.1.a:0 "Inferno is coming."
  randwerpian_deterrence:0 "Randwerpian Deterrence"
