silberhafen + added an idiot

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -332,8 +332,8 @@
  ETH_ADJ:0 "Ethelnothdunic"
  ANI:0 "Anginneowu"
  ANI_ADJ:0 "Anginneower"
- ZIL:0 "Zilverpoort"
- ZIL_ADJ:0 "Zilverpoorter"
+ ZIL:0 "Silberhafen"
+ ZIL_ADJ:0 "Silberhafer"
  ADA:0 "Adasmerragadde"
  ADA_ADJ:0 "Adasmerragaddan"
  DCH:0 "Dorchia"
