--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -354,7 +354,7 @@
  PROV_ADJ353:0 "Stuorivielija"
  PROV_ADJ354:0 "Storesaale"
  PROV_ADJ355:0 "Luvima"
- PROV_ADJ356:0 "Zilverpoort"
+ PROV_ADJ356:0 "Silberhafen"
  PROV_ADJ357:0 "Lovveka"
  PROV_ADJ358:0 "Esydian Bay"
  PROV_ADJ359:0 "Hafani Coast"
