--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -354,7 +354,7 @@
  PROV353:0 "Stuorivielija"
  PROV354:0 "Storesaale"
  PROV355:0 "Luvima"
- PROV356:0 "Zilverpoort"
+ PROV356:0 "Silberhafen"
  PROV357:0 "Lovveka"
  PROV358:0 "Esydian Bay"
  PROV359:0 "Hafani Coast"
