--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -389,7 +389,7 @@
  repumoshi:0 "Repumoshi"
  hurun:0 "Hurun"
 
- dongfanahg_group:0 "Dongfanahg"
+ okukaigan_group:0 "Okukaigan"
  aoishiman:0 "Aoishiman"
  shiroshotan:0 "Shiroshotan"
  chuoshotan:0 "Chushotan"
