--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1117,3 +1117,12 @@
  SAL_ADJ:0 "Salian"
  CAT:0 "Caidthmor"
  CAT_ADJ:0 "Caidthmorian"
+
+ AOI:0 "Aoishima"
+ AOI_ADJ:0 "Aoishiman"
+ KOK:0 "Kokyan"
+ KOK_ADJ:0 "Kokyani"
+ SHI:0 "Shirosho"
+ SHI_ADJ:0 "Shiroshan"
+ KWO:0 "Kwokuen"
+ KWO_ADJ:0 "Kwokuenian"
