--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -4,6 +4,11 @@
 
  ## Ideas
 
+ silberhafen_ideas:0 "Silberhafen Ideas"
+
+ silberhafen_ideas_bonus:0 "Silberhafen Ambition"
+ silberhafen_ideas_start:0 "Silberhafen Traditions"
+
  silberhafen_urban_lifestyle:0 "Urban Lifestyle"
  silberhafen_urban_lifestyle_desc:0 "Our past as a humble trade port caused our population to often life in cities. After our country grown we still continued to live in cities instead of villages, because of that we have a lot of experienced architects that help us develop our lands better."
 
