--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -1,17 +1,17 @@
 ﻿l_english:
- TAEDIUM_BOOKMARK_TITLE:0 "Taedium Universalis"
+ TAEDIUM_BOOKMARK_TITLE:0 "£lobby_list_entry_1£"
  TAEDIUM_BOOKMARK_DESC:0 "Continent of Taedium experienced many disaster in recent time - hordes, plague, internal struggles and isolation. Eastern trade routes have been severed by pirates and nomadic empires; many traders hope to find new routes by crossing the trecherous Niheyan Ocean. The Saelian Empires tries to reform as the sigilian community grows tired of the Universal Monarchy. Donucakar and western camarian states desperately fight off chilverchian attacks of prideful princes seeeking loot and glory. Balance of power in the continent is fragile and everyone is waiting for it to burst - but who will emerge victorious?"
 
- TAEDIUM_NORTHERN_LANDS_TITLE:0 "Northern Lands"
+ TAEDIUM_NORTHERN_LANDS_TITLE:0 "£lobby_list_entry_1£"
  TAEDIUM_NORTHERN_LANDS_DESC:0 "Despite internal instability, the Ehrenic Confederation is dominant over the northern straits with influence all over the region. Tummic and Nifthemi resistance is struggling to overcome the growing ambitions of consul Diedrich Schumacher as the remnants of the first confederacy lick their wounds in dorchean isles. Marstonian duchy of Ziemelia is satisfied with their recent territorial gains, but not for long - looking at their cultural bretherens and neighbouring merchant republic of Uzkolia as a potential target. Sons of king Eadwig fight for his crown while resisting indriger and labosian opportunists from abroad. Who will finally unite the region and achieve indisputable dominance?"
 
- TAEDIUM_AQERB_BOOKMARK_TITLE:0 "Crisis in the West"
+ TAEDIUM_AQERB_BOOKMARK_TITLE:0 "£lobby_list_entry_1£"
  TAEDIUM_AQERB_BOOKMARK_DESC:0 "The peninsula is a frontline of major conflicts between sigilian and aqerbic countries. Ambitious king of Narbona aggresively expands into yaltazim mainland with little to no resistance while the kingdom of Ignidunta seeks to completely control regional trade routes. But all is not lost to yaltazims - nusabates of Al-Nahralnoriya and Antawil have ambitions of their own. Narbonese borderlands slowly get tired of their overlords ruler and plot to gain independence. With no place to expand many of these states look to other frontiers overseas..."
 
- TAEDIUM_KAKIGIA_BOOKMARK_TITLE:0 "Ruins of an Empire"
+ TAEDIUM_KAKIGIA_BOOKMARK_TITLE:0 "£lobby_list_entry_1£"
  TAEDIUM_KAKIGIA_BOOKMARK_DESC:0 ""
 
- TAEDIUM_WASICHANTLIA_BOOKMARK_TITLE:0 "The New World"
+ TAEDIUM_WASICHANTLIA_BOOKMARK_TITLE:0 "£lobby_list_entry_1£"
  TAEDIUM_WASICHANTLIA_BOOKMARK_DESC:0 ""
 
  TAEDIUM_HESTAN_BOOKMARK_TITLE:0 "Hestani Stagnation"
