first missions workin

--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -7,12 +7,15 @@
 
  ZIL_need_for_change_title:0 "Need for Change"
  ZIL_need_for_change_desc:0 ""
+ ZIL_is_franz_dead_ctt:0 "Franz Moldenich doesn't rule Silberhafen"
 
  ZIL_our_plans_title:0 "Our Plans"
  ZIL_our_plans_desc:0 ""
 
  ZIL_future_of_silberhafen_title:0 "Future of Silberhafen"
  ZIL_future_of_silberhafen_desc:0 ""
+ SILBERLAND:0 "Silberland"
+ SILBERLAND_ADJ:0 "Silberlander"
 
  ZIL_armies_of_silberhafen_title:0 "Armies of Silberhafen"
  ZIL_armies_of_silberhafen_desc:0 ""
