trade + trade companies + fixes

--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -50,3 +50,21 @@
  geniburgh_company.6.desc:0 "News are coming from the province of [local_ruler_liar_et.GetName] - local warlord is officialy challenging our government for autonomy in his 'domain'. He threatens to deploy 'millions' of men to the battlefield and bathe in our dirty blood. How should we deal with this lunatic?"
  geniburgh_company.6.a:0 "Oh? youre approaching ME?"
  geniburgh_company.6.b:0 "He is kind of scary though..."
+
+ geniburgh_company_ideas:0 "Geniburgher Ideas"
+ geniburgh_company_ideas_bonus:0 "Geniburgher Ambition"
+ geniburgh_company_ideas_start:0 "Geniburgher Traditions"
+ geniburgh_company_justified_expansions:0 "Justified Expansion"
+ geniburgh_company_justified_expansions_desc:0 "Chaos and turmoil in the remnants of the Zakarturi empire is threatening our survival. That is why we need to attack first."
+ geniburgh_company_the_peace_tax:0 "The Peace Tax"
+ geniburgh_company_the_peace_tax_desc:0 "Due to the growing raids of eastern hordes, a new tax will be set up in order to fund the defense forces of these territories."
+ geniburgh_company_resettling_of_kakigia:0 "Resettling of Kakigia"
+ geniburgh_company_resettling_of_kakigia_desc:0 "Outsiders might see this land as barren and unploughable, but just below the surface lies the most fertile soil in the continent."
+ geniburgh_company_better_mercenary_contracts:0 "Better Mercenary Contracts"
+ geniburgh_company_better_mercenary_contracts_desc:0 "We have meticulously built our reputation as the most reliable mercenary company in this part of the world and tales of our glory as far as distant Khantu."
+ geniburgh_company_rapid_expansion:0 "Rapid Expansion"
+ geniburgh_company_rapid_expansion_desc:0 "As our border slowly expands east and our might increases, the hordes grow weaker, making our campaigns even easier."
+ geniburgh_company_salary_reforms:0 "Salary Reforms"
+ geniburgh_company_salary_reforms_desc:0 "In the early days of the company, salaries were only loosely organized with most profit coming from looting. If we want to maintain a growing army, our soldiers must be not only well fed, but also well paid."
+ geniburgh_company_administrative_reforms:0 "Administrative Reforms"
+ geniburgh_company_administrative_reforms_desc:0 "For the past decades granting Amagari autonomy was enough, but in order to more effectively manage our lands we have to establish a proper administration. "
