--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -87,3 +87,5 @@
  maisetra_tradenode:0 "Maisetra"
  upper_valvu_tradenode:0 "Upper Valvu"
  tivappu_tradenode:0 "Tivappu"
+ okukaiga_tradenode:0 "Okukaiga"
+ toishima_tradenode:0 "Toishima"
