senkoi religious school + kwokuen peasnt republic + domei + rulers

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -40,6 +40,8 @@
  hujiming_school_desc:0 "Followers of the Hujiming school believe that the power and status shouldn't come from heaven, gods or inheritance, but rather from the ones skill and efforts.\n§YPreferred governments:§! Republic, Plutocracy"
  taamtau_school:0 "Taamtau"
  taamtau_school_desc:0 "Followers of the Taamtau school believe that order is the highest priority, even at the cost of individual freedom.\n§YPreferred governments:§! Monarchy"
+ senkoi_school:0 "Senkoi"
+ senkoi_school_desc:0 "Followers of the Senkoi school believe that ruler shouldn't be detached from their people, but rather live with them.\n§YPreferred governments:§! Peasant Republic"
 
  can_pick_spirit_tt:0 "This ruler did NOT pick a spirit yet."
 
@@ -128,12 +130,15 @@
  hengtua.100.desc:0 "Changing situation in our country led us to a crossroad where we must select our path. From hundreds of schools of Hengtuan philosophy there remain 6 which are of great influence. Which of these shall build our nation?"
  hengtua.100.a:0 "I'm a bot beep bop"
  hengtua.100.b:0 "Taamtau School"
- hengtua.100.C:0 "Danshu School"
+ hengtua.100.c:0 "Danshu School"
  hengtua.100.d:0 "Taowang School"
  hengtua.100.e:0 "Hujiming School"
  hengtua.100.f:0 "Shenting School"
  hengtua.100.g:0 "Haanping School"
+ hengtua.100.h:0 "Senkoi School"
 
  mapin_laws_reform:0 "Mapin Laws"
  mapin_laws_reform_desc:0 "Waging war is not so different from ruling a country - a succesful military can only be maintained through absolute discipline."
  
+ kwokuen_republic_reform:0 "Kwokuen Republic"
+ kwokuen_republic_reform_desc:0 "Following the doctrines of the Senkoi school, rulers live amongst the peasantry."
