--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -35,4 +35,24 @@
  ZIL_argenian_fleet_title:0 "Argenian Fleet"
  ZIL_argenian_fleet_desc:0 ""
 
+ ## goburment
+
+ silber_republic_reform:0 "Silber Republic"
+ silber_republic_reform_desc:0 "As a nation that is created from 4 different ethnicities we had some problems to represent everyone in government. We decided to create different groups that are focused on representing them in governance."
+
+ silber_ehrenists:0 "Ehrenists"
+ silber_ehrenists_influence:0 "Ehren Influence"
+ silber_ehrenists_FACTION_desc:0 "Our Ehren citizens"
+
+ silber_argenians:0 "Argenians"
+ silber_argenians_influence:0 "Argenian Influence"
+ silber_argenians_FACTION_desc:0 "Our Argenian Citizens"
+
+ silber_dorchians:0 "Dorchians"
+ silber_dorchians_influence:0 "Dorchian Influence"
+ silber_dorchians_FACTION_desc:0 "Our Dorchian Citizens"
+
+ silber_tummics:0 "Tummics"
+ silber_tummics_influence:0 "Tummic Influence"
+ silber_tummics_FACTION_desc:0 "Our Tummic Citizens"
 
