sea provinces + fix

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -34,6 +34,10 @@
  panpallpan_sea_area:0 "Panpallpan Sea"
  northwestern_venatian_coast_area:0 "Northwestern Venatian Coast"
  escravian_sea_area:0 "Escravian Sea"
+ okukaigan_waters_area:0 "Okukaigan Waters"
+ outer_amin_area:0 "Outer Amin"
+ farigan_sea_area:0 "Farigan Sea"
+ hengtuan_sea:0 "Tsinhoi Sea"
 
  yanla_area:0 "Yanla"
  septentra_valley_area:0 "Septentra Valley"
