--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -19,12 +19,17 @@
 
  ZIL_armies_of_silberhafen_title:0 "Armies of Silberhafen"
  ZIL_armies_of_silberhafen_desc:0 ""
+ unlock_silber_foreign_legions_tt:0 "Unlocks the government reform §YSilberian Foreign Legions§!."
 
  ZIL_conquer_our_island_title:0 "Conquer our Island"
  ZIL_conquer_our_island_desc:0 ""
 
  ZIL_consolidation_of_the_isles_title:0 "Consolidation of the Isles"
  ZIL_consolidation_of_the_isles_desc:0 ""
+ SILBERISLEN:0 "Silberislen"
+ SILBERISLEN_ADJ:0 "Silberislener"
+ ZIL_leaders_of_the_north:0 "Leaders of the North"
+ desc_ZIL_leaders_of_the_north:0 "todo"
 
  ZIL_develop_silberhafen_title:0 "Develop Silberhafen"
  ZIL_develop_silberhafen_desc:0 ""
@@ -55,4 +60,7 @@
  silber_tummics:0 "Tummics"
  silber_tummics_influence:0 "Tummic Influence"
  silber_tummics_FACTION_desc:0 "Our Tummic Citizens"
+
+ silber_foreign_legions_reform:0 "Silberian Foreign Legions"
+ silber_foreign_legions_reform_desc:0 "Most armies of Silberland are made from non-ehren citizens. Because of that our recruitment methods are focused in lands where argenians or dorchians live"
 
