missions done in 99%

--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -33,12 +33,17 @@
 
  ZIL_develop_silberhafen_title:0 "Develop Silberhafen"
  ZIL_develop_silberhafen_desc:0 ""
+ ZIL_ehrenstadt_of_argenia:0 "Ehrenstadt of Argenia"
+ desc_ZIL_ehrenstadt_of_argenia:0 "todo"
 
  ZIL_local_sailors_title:0 "Local Sailors"
  ZIL_local_sailors_desc:0 ""
+ ZIL_local_sailors_explanation:0 "We will recieve 500 sailors and 1 light ship for each argenian province with dock or drydock"
 
  ZIL_argenian_fleet_title:0 "Argenian Fleet"
  ZIL_argenian_fleet_desc:0 ""
+ ZIL_safe_from_invaders:0 "Safe from Invaders"
+ desc_ZIL_safe_from_invaders:0 "todo"
 
  ## goburment
 
